name: ProgrammingInHaskell2ndEdition
version: 1.0
cabal-version: 1.11
build-type: Simple
license: MIT
stability: experimental
description:
    Reading note of Programming in Haskell Second Edition
x-ghc-framework-version: 8.0.2-9.6-2
x-last-ide-version: HfM1.6.1

executable ProgrammingHaskell2
    main-is: Chapter2.hs
    build-depends:
        base -any
    default-language: Haskell2010
    other-modules:
        Chapter3
        Chapter4
        Chapter5

