cabal-version: 1.11
name: ProgrammingInHaskell2ndEdition
version: 1.0
license: MIT
stability: experimental
description:
    Reading note of Programming in Haskell Second Edition
x-ghc-framework-version: 8.6.4-13.14-2
x-last-ide-version: HfM1.7.0
build-type: Simple

executable ProgrammingHaskell2
    main-is: Chapter2.hs
    other-modules:
        Chapter6
        Chapter5
        Chapter3
        Chapter7
        Chapter4
        Chapter8
    default-language: Haskell2010
    build-depends:
        base -any
